WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203009
ScrollingTreeScrollingNodeDelegateMac::stretchAmount() should not have side effects
https://bugs.webkit.org/show_bug.cgi?id=203009
Summary
ScrollingTreeScrollingNodeDelegateMac::stretchAmount() should not have side e...
Simon Fraser (smfr)
Reported
2019-10-15 15:06:51 PDT
ScrollingTreeScrollingNodeDelegateMac::stretchAmount() should not have side effects
Attachments
Patch
(22.11 KB, patch)
2019-10-15 15:08 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-10-15 15:08:42 PDT
Created
attachment 381028
[details]
Patch
WebKit Commit Bot
Comment 2
2019-10-15 18:27:40 PDT
Comment on
attachment 381028
[details]
Patch Clearing flags on attachment: 381028 Committed
r251173
: <
https://trac.webkit.org/changeset/251173
>
WebKit Commit Bot
Comment 3
2019-10-15 18:27:42 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-10-15 18:28:17 PDT
<
rdar://problem/56316418
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug